--- a/FirstBlog/blog/templates/index.html
+++ b/FirstBlog/blog/templates/index.html
@@ -7,5 +7,9 @@
     </head>
     <body>
         <h1>Hey! I am Learning Django!</h1>
+      <a href="/about/">About Me</a>
+      <a href="/python/">Python Files</a>
+      <a href="/c/">C Files</a>
+      <a href="/c++/">C++ Files</a>
     </body>
 </html>
