Clean up models and templates

--- a/FirstBlog/blog/templates/about.html
+++ b/FirstBlog/blog/templates/about.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hey!</title>
+        <title>About Page</title>
     </head>
     <body>
         <h1>Welcome to the about page</h1>
@@ -14,5 +14,6 @@
     <a href="/python/">Python Files</a>
     <a href="/c/">C Files</a>
     <a href="/c++/">C++ Files</a>
+    <a href="/java/">Java Files</a>
     </body>
 </html>
