--- a/FirstBlog/blog/templates/c++.html
+++ b/FirstBlog/blog/templates/c++.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hey!</title>
+        <title>C++ Files</title>
     </head>
     <body>
         <h1>Welcome to the C++ Files page</h1>
@@ -11,8 +11,9 @@
        Below, you will find C++ files uploaded from local computers:
     </p>
     <a href="/">Back home</a>
-    <a href="/about/">About Me</a>
+    <a href="/about/">About Page</a>
     <a href="/python/">Python Files</a>
     <a href="/c/">C Files</a>
+    <a href="/java/">Java Files</a>
     </body>
 </html>
