--- a/FirstBlog/blog/templates/java.html
+++ b/FirstBlog/blog/templates/java.html
@@ -3,17 +3,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Python Files</title>
+        <title>Java Files</title>
     </head>
     <body>
-        <h1>Welcome to the Python Files page</h1>
+        <h1>Welcome to the Java Files page</h1>
     <p>
-       Below, you will find python files uploaded from local computers:
+       Below, you will find Java files uploaded from local computers:
     </p>
     <a href="/">Back home</a>
-    <a href="/about/">About Page</a>
+    <a href="/about/">About Me</a>
+    <a href="/python/">Python Files</a>
     <a href="/c/">C Files</a>
     <a href="/c++/">C++ Files</a>
-    <a href="/java/">Java Files</a>
     </body>
 </html>
