Add file upload form and stylized websites

--- a/FirstBlog/blog/templates/compiled_files.html
+++ b/FirstBlog/blog/templates/compiled_files.html
@@ -1,10 +1,10 @@
-<!-- blog/templates/python.html -->
+<!-- blog/templates/c++.html -->
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Python Files</title>
+        <title>Compiled Files</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:600" rel="stylesheet">
@@ -14,16 +14,17 @@
       <div class="page-header">
         <h1><a href="/">Programming Website</a></h1>
       </div>
-      <h1>Welcome to the Python Files page</h1>
+        <h1>Welcome to the Compiled Files page</h1>
     <p>
-       Below, you will find python files uploaded from local computers:
+       Below, you will find Compiled files uploaded from local computers:
     </p>
     <div class="links">
     <a href="/">Back home &nbsp</a>
     <a href="/about/">About Page &nbsp</a>
+    <a href="/python/">Python Files &nbsp</a>
     <a href="/c/">C Files &nbsp</a>
     <a href="/c++/">C++ Files &nbsp</a>
-    <a href="/java/">Java Files</a>
+    <a href="/java/">Java Files &nbsp</a>
   </div>
     </body>
 </html>
