--- a/FirstBlog/blog/templates/home.html
+++ b/FirstBlog/blog/templates/home.html
@@ -16,13 +16,13 @@
         <h1>Programming Website</h1>
       </div>
       <div class="links">
-        <a href="/file/">Upload File</a>
+        <a href="/compiled_files/">Upload File</a>
       </div>
       <p>On this website, you will find files from various programming languages, from C to python.
       Go to the appropriate page using the links below</p>
       <div class="links">
       <a href="/about/">About Page &nbsp</a>
-      <a href="/compiled_files/">Compiled Files &nbsp</a>
+      <!--a href="/compiled_files/">Compiled Files &nbsp</a-->
       <a href="/python/">Python Files &nbsp</a>
       <a href="/c/">C Files &nbsp</a>
       <a href="/c++/">C++ Files &nbsp</a>
