Transfer between devices

--- a/FirstBlog/blog/templates/compiled_files.html
+++ b/FirstBlog/blog/templates/compiled_files.html
@@ -36,7 +36,7 @@
     {{  form.non_field_errors }}
     <div class="fieldWrapper">
         {{ form.name.errors }}
-        <label for="id_name">Name:</label>
+        <label for="id_name">Name of Program:</label>
         {{ form.name }}
     </div>
     <p></p>
