--- a/FirstBlog/blog/templates/base.html
+++ b/FirstBlog/blog/templates/base.html
@@ -13,7 +13,7 @@
 
     <body>
       <div class="page-header">
-        <h1>Programming Website</h1>
+        <h1><a href="/">Programming Website</a></h1>
       </div>
       {% block content %}
       {% endblock %}
