--- a/FirstBlog/blog/static/CSS/blog.css
+++ b/FirstBlog/blog/static/CSS/blog.css
@@ -31,3 +31,22 @@ p{
 h2{
   padding-left: 15px;
 }
+.button{
+  background-color: white; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  padding-left: 15px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+}
+.button1{
+  background-color: white;
+  color: black;
+  border: 2px solid #555555;
+}
+.button1:hover {
+  background-color: #555555;
+  color: white;
+}
