--- a/FirstBlog/blog/templates/compiled_files.html
+++ b/FirstBlog/blog/templates/compiled_files.html
@@ -83,11 +83,10 @@
         <label for="id_upload_date">Upload Date:</label>
         {{ form.upload_date }}
     </div>
-    <p></p>
-    <button type="submit" class="submitting">Upload</button>
-    <p></p>
-    <p><input type="reset" value="Reset form"></p>
-    <!--button type="submit">Upload</button-->
+    <br></br>
+    <p><input type="submit" value="Upload" class="submitButton"></input>
+    <input type="reset" value="Reset form" class="resetButton"></p>
+    <br></br>
 </form>
 <script>
   function reset() {
