--- a/FirstBlog/blog/static/CSS/blog.css
+++ b/FirstBlog/blog/static/CSS/blog.css
@@ -48,6 +48,8 @@ h2{
   padding-left: 15px;
   text-align: center;
   font-size: 16px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
   cursor: pointer;
   border: 2px solid #555555;
 }
@@ -68,6 +70,8 @@ h2{
   padding-left: 15px;
   text-align: center;
   font-size: 16px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
   cursor: pointer;
   border: 2px solid #555555;
 }
