--- a/FirstBlog/blog/templates/about.html
+++ b/FirstBlog/blog/templates/about.html
@@ -1,29 +1,8 @@
 <!-- blog/templates/about.html -->
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>About Page</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:600" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    </head>
-    <body>
-      <div class="page-header">
-        <h1><a href="/">Programming Website</a></h1>
-      </div>
+{% extends "base.html" %}
+{% block content %}
         <h1>Welcome to the about page</h1>
     <p>
     This website is for people to upload their programming files for others to use
     </p>
-    <div class="links">
-    <a href="/">Back home &nbsp</a>
-    <a href="/python/">Python Files &nbsp</a>
-    <a href="/c/">C Files &nbsp</a>
-    <a href="/c++/">C++ Files &nbsp</a>
-    <a href="/java/">Java Files &nbsp</a>
-  </div>
-    </body>
-</html>
+    {% endblock %}
