--- a/FirstBlog/blog/templates/base.html
+++ b/FirstBlog/blog/templates/base.html
@@ -4,7 +4,7 @@
 <html>
     <head>
       <meta charset="utf-8">
-      <title>Programming Website</title>
+      <title></title>
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:600" rel="stylesheet">
