--- a/FirstBlog/blog/templates/python.html
+++ b/FirstBlog/blog/templates/python.html
@@ -1,32 +1,44 @@
 <!-- blog/templates/python.html -->
 {% extends "base.html" %}
 {% block content %}
-      <h1>Welcome to the Python Files page</h1>
-    <p>
-       Below, you will find python files uploaded from local computers:
-    </p>
-    {% if files %}
-      <ul>
-      {% for file in files %}
-        <% if (file.css_class="py") %>
-        <% { %>
-          <li><a href="{{ file.file_upload.url }}">{{ file.file_upload.name }}</a></li>
-          <% } %>
-      {% endfor %}
-    {% endif %}
-      </ul>
-      <script>
-      function ext(){
-        var exten = file.css_class;
-        var bool;
-        if (exten == "py"){
-          bool = True;
-        }
-        else{
-          bool = False;
-        }
-        document.getElementById("thing").innerHTML = bool;
-      }
-        </script>
+      <h2>Welcome to the Python Files page</h2>
+      <p>
+        Below, you will find Python files uploaded from local computers:
+      </p>
 
+      {% if files %}
+        <ul>
+        {% for file in files %}
+        <input type="hidden" id="lang" name="language" value="{{ file.language }}">
+        <!--input type="hidden" id="name" name="nameb" value="{{ file.name }}"-->
+
+        <script type="text/javascript">
+            var thing = "{{ files|escapejs }}";
+            document.write({{ file_json.name }});
+            var lang = document.getElementById("lang").value;
+            var exis;
+            if (lang == "PY"){
+              exis = "True";
+            } else {
+                exis = "False";
+            }
+            post = exis;
+            if (post == "True"){
+              name = document.getElementById("name").value;;
+              document.getElementById("link").innerHTML = name;
+            } else {
+                break;
+            }
+          </script>
+
+            <li><a id="link" href="{{ file.file_upload.url }}">Thing</a></li>
+        {% endfor %}
+        </ul>
+      {% else %}
+        <p>No files</p>
+      {% endif %}
+
+      <script type="text/javascript">
+      lan(file);
+      </script>
   {% endblock %}
